--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.468.0",
-    "next": "latest",
+    "next": "15.2.4",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
