--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,5 +1,6 @@
 {
-  "name": "MindLoop",
+  "id": "1",
+  "name": "MindLoopp",
   "short_name": "MindLoop",
   "description": "Capture Your Moments of Insight",
   "start_url": "/",
