--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.468.0",
     "next": "15.2.4",
