Change name in manifest

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "1",
-  "name": "MindLoopp",
+  "name": "MindLoop",
   "short_name": "MindLoop",
   "description": "Capture Your Moments of Insight",
   "start_url": "/",
