--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "15.2.4",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.3",
+    "nuqs": "^2.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
